force-app/main/default/objects/Travel_Insurance__c/Travel_Insurance__c.object-meta.xml
<CustomObject>
    <label>Travel Insurance</label>
    <nameField>
        <displayFormat>TI-{0000000}</displayFormat>
        <label>Travel Insurance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Insurance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>