force-app/main/default/objects/Travel_Insurance__c/fields/CLIENT__c.field-meta.xml
<CustomField>
    <fullName>CLIENT__c</fullName>
    <label>CLIENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>