force-app/main/default/objects/Travel_Insurance__c/fields/CLIENT_REFNO__c.field-meta.xml
<CustomField>
    <fullName>CLIENT_REFNO__c</fullName>
    <label>CLIENT REFNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>