force-app/main/default/objects/Travel_Insurance__c/fields/COMMISSION__c.field-meta.xml
<CustomField>
    <fullName>COMMISSION__c</fullName>
    <label>COMMISSION</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>