force-app/main/default/objects/Travel_Insurance__c/fields/CREATED_DATE__c.field-meta.xml
<CustomField>
    <fullName>CREATED_DATE__c</fullName>
    <label>CREATED DATE</label>
    <type>Date</type>
</CustomField>