force-app/main/default/objects/Travel_Insurance__c/fields/DESTINATION__c.field-meta.xml
<CustomField>
    <fullName>DESTINATION__c</fullName>
    <label>DESTINATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>