force-app/main/default/objects/Travel_Insurance__c/fields/EXCESS_FEE__c.field-meta.xml
<CustomField>
    <fullName>EXCESS_FEE__c</fullName>
    <label>EXCESS FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>