force-app/main/default/objects/Travel_Insurance__c/fields/GWP__c.field-meta.xml
<CustomField>
    <fullName>GWP__c</fullName>
    <label>GWP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>