force-app/main/default/objects/Travel_Insurance__c/fields/ISSUE_DATE__c.field-meta.xml
<CustomField>
    <fullName>ISSUE_DATE__c</fullName>
    <label>ISSUE DATE</label>
    <type>Date</type>
</CustomField>