force-app/main/default/objects/Travel_Insurance__c/fields/MEMBER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>MEMBER_NUMBER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MEMBER NUMBER</label>
    <referenceTo>TAD_Order__c</referenceTo>
    <relationshipLabel>Travel Insurance</relationshipLabel>
    <relationshipName>Travel_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>