force-app/main/default/objects/Travel_Insurance__c/fields/PAYMENT_METHOD__c.field-meta.xml
<CustomField>
    <fullName>PAYMENT_METHOD__c</fullName>
    <label>PAYMENT METHOD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>