force-app/main/default/objects/Travel_Insurance__c/fields/PE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PE_FLAG__c</fullName>
    <label>PE FLAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>