force-app/main/default/objects/Travel_Insurance__c/fields/PLAN__c.field-meta.xml
<CustomField>
    <fullName>PLAN__c</fullName>
    <label>PLAN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>