force-app/main/default/objects/Travel_Insurance__c/fields/PLAN_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PLAN_TYPE__c</fullName>
    <label>PLAN TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>