force-app/main/default/objects/Travel_Insurance__c/fields/POLICY_CREATED_BY__c.field-meta.xml
<CustomField>
    <fullName>POLICY_CREATED_BY__c</fullName>
    <label>POLICY CREATED BY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>