force-app/main/default/objects/Travel_Insurance__c/fields/POLICY_STATUS__c.field-meta.xml
<CustomField>
    <fullName>POLICY_STATUS__c</fullName>
    <label>POLICY STATUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>