force-app/main/default/objects/Travel_Insurance__c/fields/PROGRAM__c.field-meta.xml
<CustomField>
    <fullName>PROGRAM__c</fullName>
    <label>PROGRAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>