force-app/main/default/objects/Travel_Insurance__c/fields/PROMO_CODE__c.field-meta.xml
<CustomField>
    <fullName>PROMO_CODE__c</fullName>
    <label>PROMO CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>