force-app/main/default/objects/Travel_Insurance__c/fields/STAFF_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>STAFF_DISCOUNT__c</fullName>
    <label>STAFF DISCOUNT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>