force-app/main/default/objects/Travel_Insurance__c/fields/START_DATE__c.field-meta.xml
<CustomField>
    <fullName>START_DATE__c</fullName>
    <label>START DATE</label>
    <type>Date</type>
</CustomField>